--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '[6.0,6.2)', changing: true
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.+', changing: true
     }
 }
 
@@ -17,13 +17,15 @@ apply plugin: 'java'
 apply plugin: 'net.minecraftforge.gradle'
 
 minecraft {
-    mappings channel: 'official', version: '1.20.1'
+    mappings channel: 'official', version: '1.16.5'
 }
 
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
-version = '1.2.0'
+version = '1.16.5-2.0.0'
 group = 'me.neovitalism.pixelmonextension'
+
+java.toolchain.languageVersion = JavaLanguageVersion.of(8)
 
 repositories {
     mavenCentral()
@@ -50,11 +52,11 @@ repositories {
 }
 
 dependencies {
-    minecraft "net.minecraftforge:forge:1.20.1-47.1.44"
+    minecraft 'net.minecraftforge:forge:1.16.5-36.2.34'
     implementation 'org.jetbrains:annotations:24.0.1'
-    implementation fg.deobf('pixelmon:Pixelmon-1.20.1-9.2.3-server:9.2.3')
+    implementation fg.deobf('pixelmon:Pixelmon-1.16.5-9.1.10-server:9.1.10')
 
-    compileOnly 'org.spigotmc:spigot-api:1.20.1-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
     compileOnly 'me.clip:placeholderapi:2.10.10'
 }
 
